--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@
     --background: 20 14% 4%;
     --foreground: 30 10% 96%;
 
-    --primary: 27 35% 35%;
+    --primary: 27 79.61% 69.1%;
     --primary-foreground: 40 10% 98%;
 
     --secondary: 0 0% 8%;
@@ -34,6 +34,11 @@
 
     --accent: 40 80% 55%;
     --accent-foreground: 20 14% 4%;
+  }
+}
+@layer components {
+  .dark .bg-primary {
+    @apply bg-[hsl(27deg_47.42%_29.38%)];
   }
 }
 
